thread_exit(): Postpone deleting the thread's user stack until after sending the thread's death notifications. The fixes issues where other threads depend on objects on its stack (particularly relevant for the main thread). Fixes #6315.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@37509 a95241bf-73f2-0310-859d-f6bbb57e9c96